refaktorering: bruk cascade og collections-metoder for å oppdatere entiteter under Oppgave og OppgaveFiltrering (#2242)