@@ -3,23 +3,25 @@ package no.nav.foreldrepenger.los.hendelse.hendelsehåndterer;
 import static java.util.Collections.emptyList;
 import static no.nav.foreldrepenger.los.oppgave.AndreKriterierType.PAPIRSØKNAD;
 import static no.nav.foreldrepenger.los.oppgave.AndreKriterierType.UTLANDSSAK;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
-import org.assertj.core.api.Assertions;
+import jakarta.persistence.EntityManager;
+
+import no.nav.foreldrepenger.los.DBTestUtil;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import jakarta.persistence.EntityManager;
 import no.nav.foreldrepenger.los.JpaExtension;
 import no.nav.foreldrepenger.los.domene.typer.BehandlingId;
 import no.nav.foreldrepenger.los.domene.typer.Saksnummer;
@@ -29,7 +31,6 @@ import no.nav.foreldrepenger.los.oppgave.BehandlingType;
 import no.nav.foreldrepenger.los.oppgave.FagsakYtelseType;
 import no.nav.foreldrepenger.los.oppgave.Oppgave;
 import no.nav.foreldrepenger.los.oppgave.OppgaveEgenskap;
-import no.nav.foreldrepenger.los.oppgave.OppgaveRepository;
 
 @ExtendWith(JpaExtension.class)
 @ExtendWith(MockitoExtension.class)
@@ -37,98 +38,76 @@ class OppgaveEgenskapHåndtererTest {
 
     private static final BehandlingId BEHANDLING_ID = BehandlingId.random();
 
-    private OppgaveRepository oppgaveRepository;
-    private OppgaveEgenskapHåndterer egenskapHandler;
+    private OppgaveEgenskapHåndterer egenskapHåndterer;
 
     @Mock
     private OppgaveEgenskapFinner oppgaveEgenskapFinner;
     @Mock
     private Beskyttelsesbehov beskyttelsesbehov;
+    private EntityManager entityManager;
 
     @BeforeEach
     void setUp(EntityManager entityManager) {
-        oppgaveRepository = new OppgaveRepository(entityManager);
-        egenskapHandler = new OppgaveEgenskapHåndterer(oppgaveRepository, beskyttelsesbehov);
+        this.entityManager = entityManager;
+        egenskapHåndterer = new OppgaveEgenskapHåndterer(beskyttelsesbehov);
     }
 
     @Test
     void opprettOppgaveEgenskaperTest() {
-        // arrange
-        var ønskedeEgenskaper = kriterieArrayOf(UTLANDSSAK, PAPIRSØKNAD);
-        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(Arrays.asList(ønskedeEgenskaper));
+        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(List.of(UTLANDSSAK, PAPIRSØKNAD));
+        var oppgave = lagOppgave();
 
-        // act
-        egenskapHandler.håndterOppgaveEgenskaper(lagOppgave(), oppgaveEgenskapFinner);
+        egenskapHåndterer.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
 
-        // assert
-        Assertions.assertThat(hentAndreKriterierTypeListe(new Saksnummer("42"))).containsExactlyInAnyOrder(ønskedeEgenskaper);
+        assertThat(oppgave.getOppgaveEgenskaper().stream().map(OppgaveEgenskap::getAndreKriterierType))
+            .containsOnly(UTLANDSSAK, PAPIRSØKNAD);
     }
 
     @Test
     void opprettOppgaveEgenskaperMedKode7Test() {
-        // arrange
-        var ønskedeEgenskaper = kriterieArrayOf(UTLANDSSAK, PAPIRSØKNAD);
-        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(Arrays.asList(ønskedeEgenskaper));
+        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(List.of());
         when(beskyttelsesbehov.getBeskyttelsesKriterier(any())).thenReturn(Set.of(AndreKriterierType.KODE7_SAK));
+        var oppgave = lagOppgave();
 
-        // act
-        egenskapHandler.håndterOppgaveEgenskaper(lagOppgave(), oppgaveEgenskapFinner);
+        egenskapHåndterer.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
 
-        // assert
-        Assertions.assertThat(hentAndreKriterierTypeListe(new Saksnummer("42"))).contains(AndreKriterierType.KODE7_SAK);
+        assertThat(oppgave.getOppgaveEgenskaper().stream().map(OppgaveEgenskap::getAndreKriterierType))
+            .containsOnly(AndreKriterierType.KODE7_SAK);
     }
 
     @Test
     void deaktiverUaktuelleEksisterendeOppgaveEgenskaper() {
         var oppgave = lagOppgave();
-        oppgaveRepository.lagre(OppgaveEgenskap.builder().medOppgave(oppgave).medAndreKriterierType(PAPIRSØKNAD).build());
+        var uaktuellEgenskap = OppgaveEgenskap.builder().medAndreKriterierType(PAPIRSØKNAD).build();
+        oppgave.leggTilOppgaveEgenskap(uaktuellEgenskap);
         when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(emptyList());
-        egenskapHandler.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
 
-        Assertions.assertThat(hentAndreKriterierTypeListe(new Saksnummer("42"))).isEmpty();
+        egenskapHåndterer.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
+
+        assertThat(oppgave.getOppgaveEgenskaper()).isEmpty();
     }
 
     @Test
     void kunEttAktivtTilfelleAvHverEgenskap() {
         var oppgave = lagOppgave();
-        oppgaveRepository.lagre(OppgaveEgenskap.builder().medOppgave(oppgave).medAndreKriterierType(UTLANDSSAK).build());
+        oppgave.leggTilOppgaveEgenskap(OppgaveEgenskap.builder().medAndreKriterierType(UTLANDSSAK).build());
+        entityManager.persist(oppgave);
+        entityManager.flush();
+
         when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(List.of(UTLANDSSAK));
-        egenskapHandler.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
 
-        Assertions.assertThat(hentAndreKriterierTypeListe(new Saksnummer("42"))).containsExactly(UTLANDSSAK);
-    }
+        egenskapHåndterer.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
+        entityManager.flush(); // sørge for å trigge orphanremoval / avdekke eventuelle feil med equals etc
+        entityManager.refresh(oppgave);
 
-    @Test
-    void deaktiveringHåndtererDuplikateOppgaveEgenskaper() {
-        // Bug i prod har opprettet dubletter. Tester deaktivering av samtlige dubletter.
-        var oppgave = lagOppgave();
-        oppgaveRepository.lagre(OppgaveEgenskap.builder().medOppgave(oppgave).medAndreKriterierType(PAPIRSØKNAD).build());
-        oppgaveRepository.lagre(OppgaveEgenskap.builder().medOppgave(oppgave).medAndreKriterierType(PAPIRSØKNAD).build());
-        oppgaveRepository.lagre(OppgaveEgenskap.builder().medOppgave(oppgave).medAndreKriterierType(PAPIRSØKNAD).build());
-        oppgaveRepository.lagre(OppgaveEgenskap.builder().medOppgave(oppgave).medAndreKriterierType(PAPIRSØKNAD).build());
-        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(emptyList());
-        egenskapHandler.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
-
-        Assertions.assertThat(hentAndreKriterierTypeListe(new Saksnummer("42"))).isEmpty();
-    }
-
-    private static AndreKriterierType[] kriterieArrayOf(AndreKriterierType... kriterier) {
-        return kriterier; // ble hakket penere enn å ha AndreKriterierType[] overalt.
-    }
-
-    private List<AndreKriterierType> hentAndreKriterierTypeListe(Saksnummer saksnummer) {
-        return oppgaveRepository.hentOppgaveEgenskaper(oppgaveId(saksnummer))
-            .stream()
-            .map(OppgaveEgenskap::getAndreKriterierType)
-            .toList();
-    }
-
-    private Long oppgaveId(Saksnummer saksnummer) {
-        return oppgaveRepository.hentAktiveOppgaverForSaksnummer(List.of(saksnummer)).stream().map(Oppgave::getId).findFirst().orElseThrow();
+        assertThat(oppgave.getOppgaveEgenskaper()).size().isEqualTo(1);
+        assertThat(oppgave.getOppgaveEgenskaper()).first().matches(oe -> oe.getAndreKriterierType().equals(UTLANDSSAK));
+        var oe = DBTestUtil.hentAlle(entityManager, OppgaveEgenskap.class);
+        assertThat(oe).hasSize(1);
     }
 
     private Oppgave lagOppgave() {
-        var oppgave = Oppgave.builder()
+        return Oppgave.builder()
             .medSaksnummer(new Saksnummer("42"))
             .medBehandlingId(BEHANDLING_ID)
             .medAktørId(AktørId.dummy())
@@ -139,7 +118,5 @@ class OppgaveEgenskapHåndtererTest {
             .medBehandlingOpprettet(LocalDateTime.now())
             .medFørsteStønadsdag(LocalDate.now().plusMonths(1))
             .build();
-        oppgaveRepository.lagre(oppgave);
-        return oppgave;
     }
 }
